# nos

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  Taskfile.dist.yml  meson.build  meson.options
image/: meson.build
kernel/: kernel.cpp  kernel.hpp  meson.build
kernel/abi/: cxxabi.cpp  cxxabi.hpp
kernel/arch/: arch.hpp
kernel/arch/x86_64/: arch.cpp  io.hpp
kernel/boot/: loader.cpp  loader.hpp  start.cpp
kernel/include/: config.hpp  kernel.hpp
kernel/include/arch/: arch.hpp
kernel/include/arch/x86_64/: io.hpp
kernel/include/boot/: loader.hpp
kernel/include/drivers/: serial.hpp
kernel/include/utility/: log.hpp  panic.hpp
kernel/kernel/: config.hpp  kernel.cpp  kernel.hpp  start.cpp
kernel/kernel/arch/: arch.cpp  arch.hpp  cpu.hpp  interrupt.hpp
kernel/kernel/arch/x86_64/: arch.cpp  arch.hpp  cpu-registers-push-pop.inc  cpu.hpp  gdt.cpp  gdt.hpp  global-descriptor-table.cpp  global-descriptor-table.hpp  idt.S  idt.cpp  idt.hpp  interrupt-descriptor-table.S  interrupt-descriptor-table.cpp  interrupt-descriptor-table.hpp  interrupt.hpp  io.hpp  pic.cpp  pic.hpp  programmable-interrupt-controller.cpp  programmable-interrupt-controller.hpp  task-state-segment.cpp  task-state-segment.hpp  tss.cpp  tss.hpp
kernel/kernel/debug/: assert.cpp
kernel/kernel/drivers/: serial.hpp
kernel/kernel/lang/: cxxabi.cpp  cxxabi.hpp  new.cpp  new.hpp  ubsan.cpp
kernel/kernel/utility/: cstring.cpp  log.cpp  log.hpp  panic.cpp  panic.hpp
kernel/lang/: cxxabi.cpp  cxxabi.hpp
kernel/linker/: x86_64.ld
kernel/source/: kernel.cpp  start.cpp
kernel/source/arch/x86_64/: arch.cpp
kernel/source/boot/: loader.cpp  start.cpp
kernel/source/debug/: assert.cpp
kernel/source/lang/: cxxabi.cpp  ubsan.cpp
kernel/source/utility/: log.cpp  panic.cpp
lib/libcore/: base_types.hpp  config.hpp  meson.build
lib/libcore/concept/: same_as.hpp
lib/libcore/memory/: compare.cpp  compare.hpp  copy.cpp  copy.hpp  move.cpp  move.hpp  set.cpp  set.hpp
lib/libcore/ranges/: size.hpp
lib/libcore/string/: string_view.hpp
libs/libc/: meson.build
libs/libc/include/: string.h
libs/libc/include_with_prefix/: assert.h  nos_string.h
libs/libc/source/: apidef.h
libs/libc/source/string/: memcmp.c  memcpy.c  memmove.c  memset.c
libs/libc/tests/string/: memcmp_tests.cpp  memcpy_tests.cpp  memmove_tests.cpp  memset_tests.cpp
libs/libc/tests/utility/: asan_buffer.hpp
libs/libcxx/: meson.build
libs/libcxx/include/: assert.hpp  base_types.hpp  string_view.hpp
libs/libcxx/include/ranges/: data.hpp
libs/libcxx/include/type_traits/: integral_constant.hpp
libs/libcxx/tests/: string_view_tests.cpp
libs/libcxx/tests/type_traits/: is_same_tests.cpp
libs/libncxx/: README.md  meson.build
libs/libncxx/include/: base-types.hpp  def.hpp
libs/libncxx/include/algorithm/: max.hpp  min.hpp
libs/libncxx/include/concept/: integral.hpp  same-as.hpp
libs/libncxx/include/container/: array.hpp  span.hpp  static-array.hpp
libs/libncxx/include/debug/: assert.hpp
libs/libncxx/include/memory/: block.hpp  pointer-traits.hpp  utility.hpp
libs/libncxx/include/preprocessor/: buildtype.hpp
libs/libncxx/include/ranges/: data.hpp  size.hpp
libs/libncxx/include/string/: format-argument.hpp  format-specification.hpp  format-to.hpp  format.hpp  string-view.hpp  to-string-view.hpp
libs/libncxx/include/type-traits/: add-const-volatile.hpp  add-pointer.hpp  add-volatile.hpp  conditional.hpp  integral-constant.hpp  is-arithmetic.hpp  is-const.hpp  is-enum.hpp  is-floating-point.hpp  is-function.hpp  is-integral.hpp  is-same.hpp  is-signed-integer.hpp  is-signed.hpp  is-span.hpp  remove-const-volatile.hpp  remove-const.hpp  remove-reference.hpp  underlying-type.hpp
libs/libncxx/include/type_traits/: is_same.hpp
libs/libncxx/include/utility/: as-const.hpp  integer-sequence.hpp  move.hpp  source-location.hpp
libs/libncxx/source/string/: format.cpp
libs/libncxx/tests/container/: array-tests.cpp
libs/libncxx/tests/debug/: assert.cpp
libs/libncxx/tests/memory/: block-tests.cpp
libs/libncxx/tests/string/: format-tests.cpp  format-to-tests.cpp  string-view-tests.cpp  to-string-view-tests.cpp
libs/libncxx/tests/type-traits/: is-same-tests.cpp
libs/ncxx/: README.md  meson.build
libs/ncxx/ncxx/: basic-types.hpp  basic-types.test.cpp  build-type.hpp
libs/ncxx/ncxx/algorithm/: all-of.hpp  all-of.test.cpp  all.hpp  all.test.cpp  any-of.hpp  any-of.test.cpp  any.hpp  any.test.cpp  find-if.hpp  find-if.test.cpp  find.hpp  find.test.cpp  iterator.hpp  none-of.hpp  none-of.test.cpp  none.hpp  none.test.cpp
libs/ncxx/ncxx/bit/: bit-cast.hpp
libs/ncxx/ncxx/concept/: enumeration.hpp  integral.hpp  same-as.hpp
libs/ncxx/ncxx/container/: array.hpp  array.test.cpp  span.hpp  static-array.hpp
libs/ncxx/ncxx/debug/: assert.hpp  assert.test-helper.cpp
libs/ncxx/ncxx/functional/: reference-wrapper.hpp  reference-wrapper.test.cpp
libs/ncxx/ncxx/hash/: crc32.hpp  crc32.test.cpp
libs/ncxx/ncxx/iterator/: iterator-traits.hpp
libs/ncxx/ncxx/memory/: block.hpp  block.test.cpp  pointer-traits.hpp  tagged-ptr.hpp  tagged-ptr.test.cpp  unique-ptr.hpp  unique-ptr.test.cpp  utility.hpp
libs/ncxx/ncxx/preprocessor/: build-type.hpp  concat.hpp  expand.hpp  packed.hpp  unique-var.hpp  unreachable.hpp  unused.hpp
libs/ncxx/ncxx/range/: all-of.hpp  all-of.test.cpp  all.hpp  all.test.cpp  any-of.hpp  any-of.test.cpp  any.hpp  any.test.cpp  data.hpp  find-if.hpp  find-if.test.cpp  find.hpp  find.test.cpp  iterator.hpp  none-of.hpp  none-of.test.cpp  none.hpp  none.test.cpp  size.hpp
libs/ncxx/ncxx/string/: format-argument.hpp  format-to.hpp  format-to.test.cpp  format.cpp  format.hpp  format.test.cpp  is-digit.hpp  string-view.hpp  string-view.test.cpp  to-string-view.hpp  to-string-view.test.cpp
libs/ncxx/ncxx/type-list/: concatenate-transform-type-list.hpp  concatenate-transform-type-list.test.cpp  concatenate-type-lists.hpp  concatenate-type-lists.test.cpp  convert-type-list.hpp  convert-type-list.test.cpp  enable-if-found-in-type-list.hpp  enable-if-found-in-types.hpp  (+39 more)
(+101 files in other folders)
